--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,4 +12,10 @@ jobs:
     steps:
       - name: Say hello
         run: |
-          echo "Hello World!"
+          echo "Hello World!" 
+      - name: Now it is
+        run: |
+          date
+      - name: Directory content
+        run: |
+          ls -l
