--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -13,5 +13,5 @@ jobs:
         - uses: akhileshns/heroku-deploy@v3.12.13 # This is the action
           with:
             heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-            heroku_app_name: "Pokedexqt-heroku-rest-api" #Must be unique in Heroku
-            heroku_email: "ville.niemenmaa@gmail.com"
+            heroku_app_name: pokedexqt-heroku-rest-api
+            heroku_email: ville.niemenmaa@gmail.com
