--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -15,3 +15,5 @@ jobs:
             heroku_api_key: ${{secrets.HEROKU_API_KEY}}
             heroku_app_name: pokedexqt-heroku-rest-api
             heroku_email: ville.niemenmaa@gmail.com
+            healthcheck: https://pokedexqt-heroku-rest-api.herokuapp.com/health
+            checkstring: ok
