Fix remove heroku and compine fly workflows

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,8 +3,8 @@ name: Deployment pipeline
 on:
   push:
     branches:
-      - master
-      # note that your "main" branch might be called main instead of master
+    - master
+    # note that your "main" branch might be called main instead of master
   pull_request:
     branches: [master]
     types: [opened, synchronize]
@@ -13,21 +13,41 @@ jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-      - name: npm install 
-        run: npm install  
-      - name: lint
-        run: npm run eslint
-      - name: build
-        run: npm run build
-      - name: test
-        run: npm test
-      - name: e2e tests
-        uses: cypress-io/github-action@v2
-        with:
-          command: npm run test:e2e
-          start: npm run start-prod
-          wait-on: http://localhost:5000
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+    - name: npm install
+      run: npm install
+    - name: lint
+      run: npm run eslint
+    - name: build
+      run: npm run build
+    - name: test
+      run: npm test
+    - name: e2e tests
+      uses: cypress-io/github-action@v2
+      with:
+        command: npm run test:e2e
+        start: npm run start-prod
+        wait-on: http://localhost:5000
+
+  deploy:
+    name: Deploy app
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: superfly/flyctl-actions/setup-flyctl@master
+    - run: flyctl deploy --remote-only
+      env:
+        FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+
+  tag_release:
+    if: ${{ github.event_name == 'push' }}
+    needs: [simple_deployment_pipeline]
+    runs-on: ubuntu-20.04
+    steps:
+    - name: Bump version and push tag
+      uses: anothrNick/github-tag-action@1.61.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GHUB_TOKEN }}
