--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
     "cypress:open": "cypress open",
-    "test:e2e": "cypress run"
+    "test:e2e": "cypress run",
+    "lint-win": "npx eslint --fix \"**/**/*.{js,jsx,ts,tsx}\""
   },
   "repository": {
     "type": "git",
