--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,7 +36,7 @@ jobs:
     if: ${{ github.event_name == 'push' }}
     needs: [simple_deployment_pipeline]
     name: Deploy app to fly
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
     - uses: superfly/flyctl-actions/setup-flyctl@master
@@ -47,10 +47,14 @@ jobs:
   tag_release:
     if: ${{ github.event_name == 'push' }}
     needs: [simple_deployment_pipeline]
-    runs-on: ubuntu-20.04
+    name: Bump version and push tag
+    runs-on: ubuntu-22.04
     steps:
-    - name: Bump version and push tag
-      uses: anothrNick/github-tag-action@1.61.0
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: '0'
+    - uses: anothrNick/github-tag-action@1.61.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DEFAULT_BUMP: patch
+        WITH_V: true
